--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -8,7 +8,7 @@ body {
   width: 100%;
   height: 75px;
   box-shadow: 0 0 2px 1px lightgrey;
-  background: grey;
+  background: #f1f1f1;
   display: flex;
   align-items: center;
 
@@ -29,6 +29,8 @@ body {
     cursor: pointer;
 
     li {
+      font-size: 20px;
+
       &:not(:first-child) {
         margin-left: 50px;
       }
