--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,23 +1,43 @@
 body {
   font-family: 'Roboto', sans-serif;
-  margin: 0;
+  width: 60%;
+  margin: 0 auto;
 }
 
 .header {
   position: relative;
-  width: 100%;
-  height: 75px;
-  box-shadow: 0 0 2px 1px lightgrey;
-  background: #f1f1f1;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  // box-shadow: 0 0 2px 1px lightgrey;
+  // background: #f1f1f1;
   display: flex;
   align-items: center;
 
-  .logo-text {
-    margin: 0 100px 0 50px;
-    font-size: 50px;
-    font-family: 'Cookie', cursive;
+  .link-styles {
+    text-decoration: none;
+    color: gray;
+    font-size: 20px;
     user-select: none;
-    cursor: default;
+
+    &.logo {
+      color: black;
+      // margin: 0 100px 0 50px;
+      font-size: 50px;
+      font-family: 'Cookie', cursive;
+    }
+
+    &:hover {
+      color: black;
+    }
+  }
+
+  .selected {
+    color: black;
+  }
+
+  .nav-list {
+    position: absolute;
+    right: 0;
   }
 
   ul {
@@ -26,11 +46,8 @@ body {
     margin: 0;
     padding: 0;
     user-select: none;
-    cursor: pointer;
 
     li {
-      font-size: 20px;
-
       &:not(:first-child) {
         margin-left: 50px;
       }
