--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,5 @@
 @import "./HomePage.less";
+@import "./Footer.less";
 
 body {
   margin: 0;
@@ -8,6 +9,8 @@ body {
   font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
+  position: relative;
+  padding-bottom: 6rem;
 }
 
 .app-root {
