--- a/src/styles/Footer.less
+++ b/src/styles/Footer.less
@@ -1,10 +1,6 @@
 .footer-container {
-  height: 80px;
   background: #ebebeb;
-  position: absolute;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  width: 100%;
 
   .footer-inner-container {
     display: flex;
