--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,67 +1,29 @@
 @import "./HomePage.less";
 @import "./Footer.less";
+@import "./Contact.less";
+@import "./Header.less";
 
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 #app {
-  font-family: 'Roboto', sans-serif;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  position: relative;
-  padding-bottom: 6rem;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .app-root {
-  width: 1100px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 1100px;
 }
 
-.header {
-  position: relative;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  display: flex;
-  align-items: center;
-
-  .link-styles {
-    text-decoration: none;
-    color: gray;
-    font-size: 20px;
-    user-select: none;
-
-    &.logo {
-      color: black;
-      font-size: 50px;
-      font-family: 'Cookie', cursive;
-    }
-
-    &:hover {
-      color: black;
-    }
-  }
-
-  .selected {
-    color: black;
-    border-bottom: 1px solid black;
-  }
-
-  .nav-list {
-    position: absolute;
-    right: 0;
-  }
-
-  ul {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    user-select: none;
-
-    li {
-      &:not(:first-child) {
-        margin-left: 50px;
-      }
-    }
-  }
+.main-content {
+  flex: 1;
+  width: 100%;
 }
