make footer social links clickable

--- a/src/styles/Footer.less
+++ b/src/styles/Footer.less
@@ -13,18 +13,20 @@
     }
   }
 
-  .svg-icons {
-    padding: 22.5px 0;
-    height: 35px;
-    width: 35px;
-    fill: #bababa;
-    cursor: pointer;
+  .social-link {
+    .svg-icons {
+      padding: 22.5px 0;
+      height: 35px;
+      width: 35px;
+      fill: #bababa;
+      cursor: pointer;
 
-    &:hover {
-      fill: #757575;
+      &:hover {
+        fill: #757575;
+      }
     }
 
-    &:not(:last-child) {
+    &:first-child {
       margin-right: 14px;
     }
   }
