--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,6 +1,6 @@
 @import "./HomePage.less";
 @import "./Footer.less";
-@import "./Contact.less";
+@import "./ContactPage.less";
 @import "./Header.less";
 
 body {
