--- a/src/styles/ContactPage.less
+++ b/src/styles/ContactPage.less
@@ -36,6 +36,11 @@
     }
   }
 
+  input[type=text] {
+    height: 30px;
+    font-size: 16px;
+  }
+
   textarea {
     height: 100px;
     font-family: 'Roboto', sans-serif;
