--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -1,7 +1,6 @@
 .header {
   position: relative;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -13,15 +12,13 @@
     font-size: 20px;
     user-select: none;
 
-    &.logo {
-      color: black;
-      font-size: 50px;
-      font-family: 'Cookie', cursive;
-    }
-
     &:hover {
       color: black;
     }
+  }
+
+  .logo-image {
+    max-height: 225px;
   }
 
   .selected {
