add about page text

--- a/src/styles/ContactPage.less
+++ b/src/styles/ContactPage.less
@@ -1,3 +1,7 @@
+.contact-container {
+  padding: 20px 0;
+}
+
 .contact-header-parent-container {
   display: flex;
   justify-content: center;
@@ -43,7 +47,7 @@
 
   textarea {
     height: 100px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
   }
 
   .submit-button {
