--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,10 +2,11 @@
 @import "./Footer.less";
 @import "./ContactPage.less";
 @import "./Header.less";
+@import "./AboutPage.less";
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 #app {
